--- a/vim-tmux-julia.html
+++ b/vim-tmux-julia.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1"> 
     <title>Vim and Tmux as Alternative to Juno for Julia Development</title>
     <link rel="stylesheet" href="/css/default.css">
     
