--- a/vocabulary-of-russian-news.html
+++ b/vocabulary-of-russian-news.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1"> 
     <title>How Many Words Do You Need to Know to Understand Russian News?</title>
     <link rel="stylesheet" href="/css/default.css">
     
