--- a/chance-corrected-agreement-measures.html
+++ b/chance-corrected-agreement-measures.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1"> 
     <title>Chance-Corrected Agreement Measures for a Fixed Number of Units</title>
     <link rel="stylesheet" href="/css/default.css">
     
