--- a/dropout-math-review.html
+++ b/dropout-math-review.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1"> 
     <title>The Dropout Learning Algorithm: Math Review</title>
     <link rel="stylesheet" href="/css/default.css">
     
