--- a/minimalist-static-site-generator.html
+++ b/minimalist-static-site-generator.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1"> 
     <title>A Minimalist Static Site Generator</title>
     <link rel="stylesheet" href="/css/default.css">
     
