--- a/index.html
+++ b/index.html
@@ -16,43 +16,43 @@
 <h2>2020</h2>
 <ul>
 <li>
-<p><a href="/minimalist-static-site-generator.html">A minimalist static site generator</a></p>
+<p><a href="minimalist-static-site-generator">A minimalist static site generator</a></p>
 </li>
 <li>
-<p><a href="dropout-math-review.html">The dropout learning algorithm: math review</a></p>
+<p><a href="dropout-math-review">The dropout learning algorithm: math review</a></p>
 </li>
 <li>
-<p><a href="vim-tmux-julia.html">Vim and Tmux as alternative to Juno for Julia development</a></p>
+<p><a href="vim-tmux-julia">Vim and Tmux as alternative to Juno for Julia development</a></p>
 </li>
 </ul>
 <h2>2019</h2>
 <ul>
 <li>
-<p><a href="chance-corrected-agreement-measures.html">Chance-corrected agreement measures for a fixed number of units</a></p>
+<p><a href="chance-corrected-agreement-measures">Chance-corrected agreement measures for a fixed number of units</a></p>
 </li>
 <li>
-<p><a href="f1-score-as-a-measure-of-set-similarity.html">F1 score as a measure of set similarity</a></p>
+<p><a href="f1-score-as-a-measure-of-set-similarity">F1 score as a measure of set similarity</a></p>
 </li>
 </ul>
 <h2>2018</h2>
 <ul>
 <li>
-<p><a href="vocabulary-of-russian-news.html">How many words do you need to know to understand russian news?</a></p>
+<p><a href="vocabulary-of-russian-news">How many words do you need to know to understand russian news?</a></p>
 </li>
 <li>
-<p><a href="basic-language-identification.html">Basic language identification</a></p>
+<p><a href="basic-language-identification">Basic language identification</a></p>
 </li>
 <li>
-<p><a href="learning-russian-by-reading.html">Learning Russian by reading</a></p>
+<p><a href="learning-russian-by-reading">Learning Russian by reading</a></p>
 </li>
 <li>
-<p><a href="top-down-parsing-as-graph-search/">Top-down parsing as graph search</a></p>
+<p><a href="top-down-parsing-as-graph-search">Top-down parsing as graph search</a></p>
 </li>
 </ul>
 
     </div>
     <footer id="site-footer"><nav>
-        <p id="footer-menu"><a href="/">Home</a> | <a href="/about.html">About</a></p>
+        <p id="footer-menu"><a href="/">Home</a> | <a href="/about">About</a></p>
         <p>&copy; 2018-2020 Tobias Kolditz</p>
     </nav></footer>
     
