--- a/vim-tmux-julia/index.html
+++ b/vim-tmux-julia/index.html
@@ -78,7 +78,7 @@ map &lt;F3&gt; :NERDTreeFind&lt;CR&gt;
     </article>
     <footer id="site-footer">
         <nav>
-            <p id="footer-menu"><a href="/">Home</a> | <a href="/about.html">About</a></p>
+            <p id="footer-menu"><a href="/">Home</a> | <a href="/about">About</a></p>
         </nav>
         <p>&copy; 2018-2020 Tobias Kolditz</p>
     </footer>
