--- a/about/index.html
+++ b/about/index.html
@@ -23,7 +23,7 @@ Einsteinstraße 10 <br>
 
     </div>
     <footer id="site-footer"><nav>
-        <p id="footer-menu"><a href="/">Home</a> | <a href="/about.html">About</a></p>
+        <p id="footer-menu"><a href="/">Home</a> | <a href="/about">About</a></p>
         <p>&copy; 2018-2020 Tobias Kolditz</p>
     </nav></footer>
     
