--- a/f1-score-as-a-measure-of-set-similarity/index.html
+++ b/f1-score-as-a-measure-of-set-similarity/index.html
@@ -105,7 +105,7 @@ $$</div>
     </article>
     <footer id="site-footer">
         <nav>
-            <p id="footer-menu"><a href="/">Home</a> | <a href="/about.html">About</a></p>
+            <p id="footer-menu"><a href="/">Home</a> | <a href="/about">About</a></p>
         </nav>
         <p>&copy; 2018-2020 Tobias Kolditz</p>
     </footer>
