--- a/learning-russian-by-reading/index.html
+++ b/learning-russian-by-reading/index.html
@@ -49,7 +49,7 @@
     </article>
     <footer id="site-footer">
         <nav>
-            <p id="footer-menu"><a href="/">Home</a> | <a href="/about.html">About</a></p>
+            <p id="footer-menu"><a href="/">Home</a> | <a href="/about">About</a></p>
         </nav>
         <p>&copy; 2018-2020 Tobias Kolditz</p>
     </footer>
