--- a/top-down-parsing-as-graph-search/index.html
+++ b/top-down-parsing-as-graph-search/index.html
@@ -68,7 +68,7 @@ B -&gt; b | bS | aBB   (6, 7, 8)
     </article>
     <footer id="site-footer">
         <nav>
-            <p id="footer-menu"><a href="/">Home</a> | <a href="/about.html">About</a></p>
+            <p id="footer-menu"><a href="/">Home</a> | <a href="/about">About</a></p>
         </nav>
         <p>&copy; 2018-2020 Tobias Kolditz</p>
     </footer>
