--- a/vocabulary-of-russian-news/index.html
+++ b/vocabulary-of-russian-news/index.html
@@ -119,7 +119,7 @@ doctrine’), socialite (‘member of high society’)</li>
     </article>
     <footer id="site-footer">
         <nav>
-            <p id="footer-menu"><a href="/">Home</a> | <a href="/about.html">About</a></p>
+            <p id="footer-menu"><a href="/">Home</a> | <a href="/about">About</a></p>
         </nav>
         <p>&copy; 2018-2020 Tobias Kolditz</p>
     </footer>
