--- a/index.html
+++ b/index.html
@@ -16,37 +16,37 @@
 <h2>2020</h2>
 <ul>
 <li>
-<p><a href="minimalist-static-site-generator">A minimalist static site generator</a></p>
+<p><a href="/posts/minimalist-static-site-generator">A minimalist static site generator</a></p>
 </li>
 <li>
-<p><a href="dropout-math-review">The dropout learning algorithm: math review</a></p>
+<p><a href="/posts/dropout-math-review">The dropout learning algorithm: math review</a></p>
 </li>
 <li>
-<p><a href="vim-tmux-julia">Vim and Tmux as alternative to Juno for Julia development</a></p>
+<p><a href="/posts/vim-tmux-julia">Vim and Tmux as alternative to Juno for Julia development</a></p>
 </li>
 </ul>
 <h2>2019</h2>
 <ul>
 <li>
-<p><a href="chance-corrected-agreement-measures">Chance-corrected agreement measures for a fixed number of units</a></p>
+<p><a href="/posts/chance-corrected-agreement-measures">Chance-corrected agreement measures for a fixed number of units</a></p>
 </li>
 <li>
-<p><a href="f1-score-as-a-measure-of-set-similarity">F1 score as a measure of set similarity</a></p>
+<p><a href="/posts/f1-score-as-a-measure-of-set-similarity">F1 score as a measure of set similarity</a></p>
 </li>
 </ul>
 <h2>2018</h2>
 <ul>
 <li>
-<p><a href="vocabulary-of-russian-news">How many words do you need to know to understand russian news?</a></p>
+<p><a href="/posts/vocabulary-of-russian-news">How many words do you need to know to understand russian news?</a></p>
 </li>
 <li>
-<p><a href="basic-language-identification">Basic language identification</a></p>
+<p><a href="/posts/basic-language-identification">Basic language identification</a></p>
 </li>
 <li>
-<p><a href="learning-russian-by-reading">Learning Russian by reading</a></p>
+<p><a href="/posts/learning-russian-by-reading">Learning Russian by reading</a></p>
 </li>
 <li>
-<p><a href="top-down-parsing-as-graph-search">Top-down parsing as graph search</a></p>
+<p><a href="/posts/top-down-parsing-as-graph-search">Top-down parsing as graph search</a></p>
 </li>
 </ul>
 
