--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <h2>2020</h2>
 <ul>
 <li>
-<p><a href="/posts/finite-state-optimality-theory-final-obstruent-devoicing">Finite state Optimality Theory: Final obstruent devoicing</a></p>
+<p><a href="/posts/finite-state-optimality-theory-final-obstruent-devoicing">Finite state Optimality Theory: final obstruent devoicing</a></p>
 </li>
 <li>
 <p><a href="/posts/minimalist-static-site-generator">A minimalist static site generator</a></p>
