Center top pages

--- a/index.html
+++ b/index.html
@@ -6,12 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1"> 
     <title>Proceed to Decode</title>
     <link rel="stylesheet" href="/css/default.css">
+    <link rel="stylesheet" href="/css/top.css">
     
 </head>
 
 <body>
     <div class="content">
-        <p><code style="font-size: 24px;">proceed to decode</code></p>
+        <h1>Proceed to Decode</h1>
 <p>Random writings about language, linguistics, math, programming and the like.</p>
 <h2>2020</h2>
 <ul>
@@ -40,7 +41,7 @@
 <h2>2018</h2>
 <ul>
 <li>
-<p><a href="/posts/vocabulary-of-russian-news">How many words do you need to know to understand russian news?</a></p>
+<p><a href="/posts/vocabulary-of-russian-news">How many words do you need to know to understand Russian news?</a></p>
 </li>
 <li>
 <p><a href="/posts/basic-language-identification">Basic language identification</a></p>
