--- a/about/index.html
+++ b/about/index.html
@@ -23,10 +23,10 @@ Einsteinstraße 10 <br>
 <p>If you have feedback or just want to reach out, send me an email: <code>tbs.kldtz(ät)gmail.com</code>.</p>
 
     </div>
-    <footer id="site-footer"><nav>
-        <p id="footer-menu"><a href="/">Home</a> | <a href="/about">About</a></p>
+    <footer id="site-footer">
+        <nav id="footer-menu"><a href="/">Home</a> | <a href="/about">About</a></nav>
         <p>&copy; 2018-2020 Tobias Kolditz</p>
-    </nav></footer>
+    </footer>
     
 </body>
 
