--- a/index.html
+++ b/index.html
@@ -55,10 +55,10 @@
 </ul>
 
     </div>
-    <footer id="site-footer"><nav>
-        <p id="footer-menu"><a href="/">Home</a> | <a href="/about">About</a></p>
+    <footer id="site-footer">
+        <nav id="footer-menu"><a href="/">Home</a> | <a href="/about">About</a></nav>
         <p>&copy; 2018-2020 Tobias Kolditz</p>
-    </nav></footer>
+    </footer>
     
 </body>
 
