Add post about transducing German cardinal numbers

--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
 <h2>2020</h2>
 <ul>
 <li>
+<p><a href="/posts/transducing-german-cardinal-numbers">Transducing German cardinal numbers</a></p>
+</li>
+<li>
 <p><a href="/posts/finite-state-optimality-theory-final-obstruent-devoicing">Finite state Optimality Theory: final obstruent devoicing</a></p>
 </li>
 <li>
