--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <h2>2020</h2>
 <ul>
 <li>
-<p><a href="/posts/finding-bigram-collocations">Finding bigram collocations</a></p>
+<p><a href="/posts/identifying-bigram-collocations">Identifying bigram collocations</a></p>
 </li>
 <li>
 <p><a href="/posts/transducing-german-cardinal-numbers">Transducing German cardinal numbers</a></p>
