--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1"> 
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="Random writings about language, linguistics, math, programming and the like.">
     <title>Proceed to Decode</title>
     <link rel="stylesheet" href="/css/default.css">
     <link rel="stylesheet" href="/css/top.css">
