--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Random writings about language, linguistics, math, programming and the like.">
     <title>Proceed to Decode</title>
+    <link rel="alternate" type="application/rss+xml" href="https://proceed-to-decode.com/rss.xml" title="Proceed to Decode">
     <link rel="stylesheet" href="/css/default.css">
     <link rel="stylesheet" href="/css/top.css">
     
