Add post about derivation of normal distribution

--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
 <h2>2020</h2>
 <ul>
 <li>
+<p><a href="/posts/herschel-maxwell-derivation-of-the-normal-distribution">Herschel-Maxwell derivation of the normal distribution</a></p>
+</li>
+<li>
 <p><a href="/posts/identifying-bigram-collocations">Identifying bigram collocations</a></p>
 </li>
 <li>
