--- a/about/index.html
+++ b/about/index.html
@@ -9,25 +9,37 @@
     <link rel="alternate" type="application/rss+xml" href="https://proceed-to-decode.com/rss.xml" title="Proceed to Decode">
     <link rel="stylesheet" href="/css/default.css">
     <link rel="stylesheet" href="/css/top.css">
+    <script src="https://kit.fontawesome.com/a076d05399.js"></script>
     
 </head>
 
 <body>
+    <nav class="top-menu">
+        <div class="top-menu">
+            <ul class="left-menu">
+                <li class="menu-item"><a href="/">Home</a></li>
+                <li class="menu-item"><a href="/about">About</a></li>
+            </ul>
+            <ul class="right-menu">
+                <li class="menu-item"><a href="https://github.com/kldtz"><img class="icon" src="/img/github-120.png"></a></li>
+                <li class="menu-item"><a href="/rss.xml"><img class="icon" src="/img/rss-128.png"></a></li>
+            </ul>
+        </div>
+    </nav>
+
     <div class="content">
-        <h1>About</h1>
-<p>I am a software developer and computational linguist. As such I'm interested in language(s), algorithms and machine learning. In the past I devoloped software at <a href="https://www.empolis.com/en">Empolis</a> in Berlin and did research on clinical NLP in the <a href="https://www.smith.care/?lang=en">SMITH</a> project at Jena University. Currently, I'm working at <a href="https://www.docyet.com">DOCYET</a>, a digital health startup based in Leipzig.</p>
-<h2>Legal Notice</h2>
-<p>Responsible for this site:</p>
+        <p>I am a software developer and computational linguist. As such I'm interested in language(s), algorithms and machine learning. In the past I devoloped software at <a href="https://www.empolis.com/en">Empolis</a> in Berlin and did research on clinical NLP in the <a href="https://www.smith.care/?lang=en">SMITH</a> project at Jena University. Currently, I'm working at <a href="https://www.docyet.com">DOCYET</a>, a digital health startup based in Leipzig.</p>
+<p><strong>Legal Notice</strong></p>
+<p>Responsible for this site: </p>
 <p>Tobias Kolditz <br>
 Einsteinstraße 10 <br>
 04429 Leipzig</p>
-<h2>Contact</h2>
+<p><strong>Contact</strong> </p>
 <p>If you have feedback or just want to reach out, send me an email: <code>tbs.kldtz(ät)gmail.com</code>.</p>
 
     </div>
     <footer id="site-footer">
-        <nav id="footer-menu"><a href="/">Home</a> | <a href="/about">About</a></nav>
-        <p>&copy; 2018-2020 Tobias Kolditz</p>
+        <a id="footer-name" href="/">&copy; 2018-2020<br>Tobias Kolditz</a>
     </footer>
     
 </body>
