--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
                 <li class="menu-item"><a href="/about">About</a></li>
             </ul>
             <ul class="right-menu">
-                <li class="menu-item"><a href="https://github.com/kldtz"><img class="icon" src="/img/github-120.png"></a></li>
-                <li class="menu-item"><a href="/rss.xml"><img class="icon" src="/img/rss-128.png"></a></li>
+                <li class="menu-item"><a href="https://github.com/kldtz"><img class="icon" src="/img/github-120.png" alt="GitHub"></a></li>
+                <li class="menu-item"><a href="/rss.xml"><img class="icon" src="/img/rss-128.png" alt="RSS"></a></li>
             </ul>
         </div>
     </nav>
@@ -84,6 +84,7 @@
 <span class="title">Top-Down Parsing as Graph Search</span>
 <span class="date">Sep 30</span>
 </a>
+</div>
     </div>
     <footer id="site-footer">
         <a id="footer-name" href="/">&copy; 2018-2020<br>Tobias Kolditz</a>
