Add grammatical gender post

--- a/about/index.html
+++ b/about/index.html
@@ -35,7 +35,7 @@
 Einsteinstraße 10 <br>
 04229 Leipzig</p>
 <p><strong>Contact</strong> </p>
-<p>If you have feedback or just want to reach out, send me an email: <code>tbs.kldtz(ät)gmail.com</code>.</p>
+<p>This site has no comment section. If you have feedback or just want to reach out, feel free to send me an email at <code>tbs.kldtz(ät)gmail.com</code>.</p>
 
     <footer id="site-footer">
     <a id="footer-name" href="/">&copy; 2018-2021<br>Tobias Kolditz</a>
