--- a/about/index.html
+++ b/about/index.html
@@ -28,7 +28,8 @@
         </ul>
     </div>
 </nav>
-    <p>I am a software developer and computational linguist. As such I'm interested in language(s), algorithms and machine learning. In the past I devoloped software at <a href="https://www.empolis.com/en">Empolis</a> in Berlin and did research on clinical NLP in the <a href="https://www.smith.care/?lang=en">SMITH</a> project at Jena University. Currently, I'm working at <a href="https://www.docyet.com">DOCYET</a>, a digital health startup based in Leipzig.</p>
+    <p>I'm a software engineer with a background in linguistics. In the past I devoloped software at <a href="https://www.empolis.com/en">Empolis</a> in Berlin and did research on clinical NLP in the <a href="https://www.smith.care/?lang=en">SMITH</a> project at Jena University. Currently, I'm working at <a href="https://www.docyet.com">DOCYET</a>, a digital health startup based in Leipzig.</p>
+<p>This site is filled with arbitrary things I like to spend my time on: reading obscure papers and books, building little pet projects, learning new things, usually related to language(s), math, music, or programming. The site itself is currently generated with a Makefile that calls a Rust script on a bunch of Markdown files as desribed in <a href="/posts/minimalist-static-site-generator/">this post</a>.</p>
 <p><strong>Legal Notice</strong></p>
 <p>Responsible for this site: </p>
 <p>Tobias Kolditz <br>
