--- a/about/index.html
+++ b/about/index.html
@@ -10,7 +10,7 @@
     <title>About</title>
     <link rel="alternate" type="application/rss+xml" href="https://proceed-to-decode.com/rss.xml" title="Proceed to Decode">
     <link rel="stylesheet" href="/css/default.css">
-    <link rel="stylesheet" href="/css/top.css">
+    <link rel="stylesheet" href="/css/top.css?version=2">
     
 </head>
 
@@ -28,7 +28,8 @@
         </ul>
     </div>
 </nav>
-    <p>I'm a software engineer with a background in linguistics. In the past I developed software at <a href="https://www.empolis.com/en">Empolis</a> in Berlin and did research on clinical NLP in the <a href="https://www.smith.care/?lang=en">SMITH</a> project at Jena University. Currently, I'm working at <a href="https://www.docyet.com">DOCYET</a>, a digital health startup based in Leipzig.</p>
+    <main>
+        <p>I'm a software engineer with a background in linguistics. In the past I developed software at <a href="https://www.empolis.com/en">Empolis</a> in Berlin and did research on clinical NLP in the <a href="https://www.smith.care/?lang=en">SMITH</a> project at Jena University. Currently, I'm working at <a href="https://www.docyet.com">DOCYET</a>, a digital health startup based in Leipzig.</p>
 <p>This site is filled with arbitrary things I like to spend my time on: reading obscure papers and books, building little pet projects, learning new things, usually related to language(s), math, music, or programming. The site itself is currently generated with a Makefile that calls a Rust script on a bunch of Markdown files as desribed in <a href="/posts/minimalist-static-site-generator/">this post</a>.</p>
 <p><strong>Legal Notice</strong></p>
 <p>Responsible for this site: </p>
@@ -38,6 +39,7 @@ Einsteinstraße 10 <br>
 <p><strong>Contact</strong> </p>
 <p>This site has no comment section. If you have feedback or just want to reach out, feel free to send me an email at <code>tbs.kldtz(ät)gmail.com</code>.</p>
 
+    </main>
     <footer id="site-footer">
     <a id="footer-name" href="/">&copy; 2018-2021<br>Tobias Kolditz</a>
 </footer>
