--- a/about/index.html
+++ b/about/index.html
@@ -22,9 +22,8 @@
             <li class="menu-item"><a href="/about">About</a></li>
         </ul>
         <ul class="right-menu">
-            <li class="menu-item"><a href="https://github.com/kldtz"><img class="icon" src="/img/github_icon.svg"
-                        alt="GitHub icon"></a></li>
-            <li class="menu-item"><a href="/rss.xml"><img class="icon" src="/img/rss_icon.svg" alt="RSS icon"></a></li>
+            <li class="menu-item"><a href="https://github.com/kldtz"><svg height="32" role="img" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><title>GitHub icon</title><path d="M12 .297c-6.63 0-12 5.373-12 12 0 5.303 3.438 9.8 8.205 11.385.6.113.82-.258.82-.577 0-.285-.01-1.04-.015-2.04-3.338.724-4.042-1.61-4.042-1.61C4.422 18.07 3.633 17.7 3.633 17.7c-1.087-.744.084-.729.084-.729 1.205.084 1.838 1.236 1.838 1.236 1.07 1.835 2.809 1.305 3.495.998.108-.776.417-1.305.76-1.605-2.665-.3-5.466-1.332-5.466-5.93 0-1.31.465-2.38 1.235-3.22-.135-.303-.54-1.523.105-3.176 0 0 1.005-.322 3.3 1.23.96-.267 1.98-.399 3-.405 1.02.006 2.04.138 3 .405 2.28-1.552 3.285-1.23 3.285-1.23.645 1.653.24 2.873.12 3.176.765.84 1.23 1.91 1.23 3.22 0 4.61-2.805 5.625-5.475 5.92.42.36.81 1.096.81 2.22 0 1.606-.015 2.896-.015 3.286 0 .315.21.69.825.57C20.565 22.092 24 17.592 24 12.297c0-6.627-5.373-12-12-12"/></svg></a></li>
+            <li class="menu-item"><a href="/rss.xml"><svg version="1.0" xmlns="http://www.w3.org/2000/svg" height="32" viewBox="0 0 128.000000 128.000000" preserveAspectRatio="xMidYMid meet"><g transform="translate(0.000000,128.000000) scale(0.100000,-0.100000)" stroke="none"><path d="M575 1274 c-11 -2 -45 -9 -75 -15 -216 -42 -418 -239 -475 -464 -19 -76 -19 -234 0 -310 55 -218 237 -402 455 -461 103 -28 254 -24 357 10 276 90 456 353 440 642 -18 323 -276 581 -599 598 -46 3 -92 3 -103 0z m-70 -290 c219 -52 417 -239 484 -457 11 -37 23 -97 27 -132 l7 -65 -66 0 c-72 0 -77 4 -77 68 0 49 -41 161 -80 222 -43 66 -132 148 -206 187 -63 34 -165 63 -221 63 l-33 0 0 63 c0 35 3 67 6 70 8 8 82 -1 159 -19z m-28 -232 c147 -46 258 -164 298 -317 26 -103 25 -105 -49 -105 -70 0 -67 -3 -81 70 -23 113 -140 220 -260 237 l-45 6 0 63 0 64 39 0 c22 0 65 -8 98 -18z m18 -266 c35 -35 41 -69 18 -108 -48 -82 -163 -51 -163 42 0 80 91 120 145 66z"/></g></svg></a></li>
         </ul>
     </div>
 </nav>
