--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     
     <title>Proceed to Decode</title>
     <link rel="alternate" type="application/rss+xml" href="https://proceed-to-decode.com/rss.xml" title="Proceed to Decode">
-    <link rel="stylesheet" href="/css/default.css">
+    <link rel="stylesheet" href="/css/default.css?version=2">
     <link rel="stylesheet" href="/css/top.css?version=2">
     
 </head>
