--- a/about/index.html
+++ b/about/index.html
@@ -28,7 +28,7 @@
     </div>
 </nav>
     <main>
-        <p>I'm a software developer with a background in (computational) linguistics. This site is filled with arbitrary things I like to spend my time on: reading obscure papers and books, building little pet projects, learning new things, usually related to language(s), math, music, or programming. The site itself is currently generated with a Makefile that calls a Rust script on a bunch of Markdown files as desribed in <a href="/posts/minimalist-static-site-generator/">this post</a>.</p>
+        <p>I'm a software developer with a background in (computational) linguistics. This site is filled with arbitrary things I like to spend my time on: reading obscure papers and <a href="/books">books</a>, building little pet projects, learning new things, usually related to language(s), math, music, or programming. The site itself is currently generated with a Makefile that calls a Rust script on a bunch of Markdown files as desribed in <a href="/posts/minimalist-static-site-generator/">this post</a>.</p>
 <p><strong>Legal Notice</strong></p>
 <p>Responsible for this site: </p>
 <p>Tobias Kolditz <br>
